/*
 * This file is part of jHDF. A pure Java library for accessing HDF5 files.
 *
 * https://jhdf.io
 *
 * Copyright (c) 2025 James Mudd
 *
 * MIT License see 'LICENSE' file
 */

/*
 * Gradle build file for jHDF
 */
plugins {
    // Core plugins
    id 'java-library'
    id 'jacoco' // Code coverage
    id 'maven-publish' // For the artifact collections to publish
    id 'signing' // For GPG signing artifacts
    id 'checkstyle' // Code style checks

    // Community plugins (need versions)
    id 'org.sonarqube' version '7.3.1.8318' // Code quality
    id "com.github.spotbugs" version "6.5.9" // Static analysis
    id "me.champeau.jmh" version "0.7.3" // JMH support
    id 'biz.aQute.bnd.builder' version '7.3.0' // OSGi manifest generation
}

// Variables
group = 'io.jhdf'
version = '0.12.0'

compileJava {
    sourceCompatibility = "17"
    targetCompatibility = "17"
    options.encoding = "UTF-8"
}

compileTestJava {
    sourceCompatibility = "17"
    targetCompatibility = "17"
    options.encoding = "UTF-8"
}

repositories {
    mavenCentral()
}

dependencyLocking {
    lockAllConfigurations()
}

dependencies {
    // This dependency is exported to consumers, that is to say found on their compile classpath.
    implementation 'org.slf4j:slf4j-api:2.0.18'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    // lzf compression support
    implementation 'com.ning:compress-lzf:1.2.0'
    // lz4 support https://mvnrepository.com/artifact/at.yawk.lz4/lz4-java
    implementation 'at.yawk.lz4:lz4-java:1.11.1'

    // TESTING
    // Use JUnit 5 test framework
    testImplementation(platform('org.junit:junit-bom:5.13.4'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
    // Logging impl for tests
    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.18'

    // Mocking
    testImplementation 'org.mockito:mockito-core:5.23.0'
    testImplementation 'org.powermock:powermock-core:2.0.9'

    // Matchers
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'org.assertj:assertj-core:3.27.7'

    // Alternative bitshuffle impl to check results against
    testImplementation 'org.xerial.snappy:snappy-java:1.1.10.8'
    // For parsing h5dump XML output
    testImplementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.21.3'
    testImplementation 'commons-io:commons-io:2.22.0'
    // For a FileSystemProvider implementation without FileChannel support
    testImplementation 'com.google.jimfs:jimfs:1.3.1'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }

minHeapSize = "128m" // initial heap size
maxHeapSize = "8192m" // maximum heap size
//jvmArgs '-XX:MaxPermSize=5gb' // mem argument for the test JVM

}

def getGitHash = { ->
    try {
        return providers.exec {
            commandLine 'git', 'rev-parse', '--verify', 'HEAD'
        }.standardOutput.asText.get().trim()
    } catch (Exception ignored) {
        // Can happen if git is unavailable
        return "UNAVAILABLE"
    }
}

jar {
    manifest {
        attributes('Implementation-Title': project.name,
            'Implementation-Version': project.version,
            'Automatic-Module-Name': 'io.jhdf',
            // OSGi headers
            'Bundle-ManifestVersion': '2',
            'Bundle-Version': project.version,
            // Build data
            'Build-JDK': System.getProperty('java.vendor') + ' ' + System.getProperty('java.version'),
            'Build-OS': System.getProperty('os.name') + ' ' + System.getProperty('os.version'),
            'Git-Commit': getGitHash()
        )
        exclude('io/jhdf/examples')
    }
    from('../CHANGES.md')
    from('../LICENSE')
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

task sourcesJar(type: Jar) {
    from sourceSets.main.allJava
    archiveClassifier = 'sources'
}

task javadocJar(type: Jar) {
    from javadoc
    archiveClassifier = 'javadoc'
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            artifact sourcesJar
            artifact javadocJar

            pom {
                name = 'jhdf'
                description = 'A pure Java HDF5 library'
                url = 'https://jhdf.io/'
                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://opensource.org/licenses/MIT'
                    }
                }
                developers {
                    developer {
                        id = 'jamesmudd'
                        name = 'James Mudd'
                        email = 'james.mudd@gmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/jamesmudd/jhdf.git'
                    developerConnection = 'scm:git:git://github.com/jamesmudd/jhdf.git'
                    url = 'https://github.com/jamesmudd/jhdf.git'
                }
                issueManagement {
                    system = 'github'
                    url = 'https://github.com/jamesmudd/jhdf/issues'
                }
            }
        }
    }
    repositories {
        maven {
            name = 'GitHub'
            url = 'https://maven.pkg.github.com/jamesmudd/jhdf'
            credentials {
                username = 'jamesmudd'
                password = System.getenv('GITHUB_TOKEN')
            }
        }
        // https://central.sonatype.org/publish/publish-portal-ossrh-staging-api/#configuring-the-repository
        maven {
            name = 'Sonatype'
            url "https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/"
            credentials {
                username System.getenv('SONATYPE_USERNAME')
                password System.getenv('SONATYPE_PASSWORD')
            }
        }
    }
}

signing {
    required { System.getenv("SIGNING_KEY") != null }
    def signingKey = System.getenv("SIGNING_KEY")
    def signingPassword = System.getenv("SIGNING_PASSWORD")
    useInMemoryPgpKeys(signingKey, signingPassword)
    sign publishing.publications.maven
}

import com.github.spotbugs.snom.Confidence
import com.github.spotbugs.snom.Effort

spotbugs {
    ignoreFailures = true // Allow build to continue with errors
    effort = Effort.valueOf('MAX')
    reportLevel = Confidence.valueOf('LOW') // Report all issues even low priority
    reportsDir = file("$buildDir/reports/spotbugs")
}

sonar {
    properties {
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.organization", "jamesmudd-github"
        property "sonar.projectKey", "jamesmudd_jhdf"
        // Exclusions
        property "sonar.exclusions", "src/main/java/io/jhdf/examples"
        // Spotbugs
        property "sonar.java.spotbugs.reportPaths", "build/reports/spotbugs/main.xml,build/reports/spotbugs/test.xml"
        property "sonar.jacoco.reportPath", null
        property "sonar.jacoco.reportPaths", null
        // Coverage
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
        // Checkstyle
        property "sonar.java.checkstyle.reportPaths", "build/reports/checkstyle/main.xml,build/reports/checkstyle/test.xml"
    }
}


